# Django_project_0

./: .env.alt  .env.sample  .gitignore  data.json  dogs.json  dump.rdb  groups.json  pyproject.toml
config/: settings.py  urls.py
dogs/: admin.py  forms.py  models.py  services.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_dog_views_counter.py  0003_parent.py  0004_alter_parent_name.py  0005_alter_parent_breed_alter_parent_year_born.py  0006_dog_owner.py  0007_alter_dog_options_dog_description.py
dogs/templates/: base.html  dogs_detail.html  dogs_list.html
dogs/templates/dogs/: base.html  dog_confirm_delete.html  dog_detail.html  dog_form.html  dog_list.html
dogs/templates/includes/: inc_menu.html
dogs/templatetags/: my_tags.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/bot/: DockerFile  main.py  pyproject.toml
main/bot/src/: buttons.py  handlers.py  settings.py
main/management/commands/: fill.py
main/migrations/: 0001_initial.py  0002_student_is_active.py  0003_subject.py  0004_student_email.py
main/templates/main/: base.html  (+6 more)
materials/: models.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_material_title.py  0002_material_is_published_material_slug_and_more.py  0003_alter_material_title.py  0004_alter_material_title.py
students/: models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
users_alt/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users_alt/migrations/: 0001_initial.py  0002_user_token.py
(+15 files in other folders)
