[tool.poetry]
name = "project0"
version = "0.1.0"
description = ""
authors = ["Eduard Slobodyanik <slobodyanik.ed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
sqlparse = "^0.5.1"
psycopg2-binary = "^2.9.9"
asgiref = "^3.8.1"
pytils = "^0.4.1"
black = "^24.10.0"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
